mock-ingresses/ingress-status-dr.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: traefik-dr
    name: status-dr
    namespace: status
  spec:
    rules:
    - host: status.homelab-dr.<your-domain>
      http:
        paths:
        - backend:
            serviceName: nginx-svc
            servicePort: 80
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
